--- a/management_system/templates/base/base.html
+++ b/management_system/templates/base/base.html
@@ -16,6 +16,7 @@
 			<hr class="m-0">
 			<ul class="nav flex-column">
 				<li class="nav-item"><a class="nav-link" href="/mission/search">Missions</a></li>
+				<li class="nav-item"><a class="nav-link" href="/glider/search">Gliders</a></li>
 			</ul>
 		</div>
 	</nav>
